Fix links, change topbar spacing

--- a/template.css
+++ b/template.css
@@ -47,12 +47,13 @@ body {
 #links a {
     color: white;
     text-decoration: none;
+    margin: 10px;
 
 }
 
 #links a:hover {
     color: rgb(218, 218, 218);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 #topBar.scrolled {
@@ -73,7 +74,7 @@ body {
     text-align: left;
     position: absolute;
     left: 5%;
-    top: -1%;
+    top: -10%;
     margin: 0;
     padding: 0;
     color: white;
@@ -141,11 +142,10 @@ body {
 
 #headerLogo {
     width: 350px;
-    margin-bottom: 15px;
     margin-left: 5%;
     margin-right: 5%;
+    margin-top: 5%;
     z-index: 0;
-    margin-bottom: -30px;
 }
 
 footer {
